--- a/assessment.html
+++ b/assessment.html
@@ -5,7 +5,7 @@
     <meta name="twitter:card" content="summary" />
     <meta
       property="og:url"
-      content="https://あなたのusername.github.io/assessment/assessment.html"
+      content="https://foxtaill.github.io/assessment/assessment.html"
     />
     <meta property="og:title" content="あなたのいいところ診断" />
     <meta
